language/move-lang/tests/move_check/expansion/use_nested_self_as_invalid.exp
warning[W09001]: unused alias
  ┌─ tests/move_check/expansion/use_nested_self_as_invalid.move:8:26
  │
8 │     use 0x2::X::{Self as B, foo, S};
  │                          ^ Unused 'use' of alias 'B'. Consider removing it

error[E03002]: unbound module
   ┌─ tests/move_check/expansion/use_nested_self_as_invalid.move:10:19
   │
10 │     struct X { f: X::S, f2: S }
   │                   ^ Unbound module alias 'X'

error[E03002]: unbound module
   ┌─ tests/move_check/expansion/use_nested_self_as_invalid.move:12:9
   │
12 │         X::foo();
   │         ^ Unbound module alias 'X'

